--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,22 @@ footer {
   margin-top: 20px;
 }
 
+body {
+  background-color: #e5e5e5;;
+}
+
+.single-movie {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.single-movie:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transform: scale(1.05);
+  transition: 0.5s;
+}
+
 li > a {
   text-decoration: none;
   color: #fff;
@@ -46,11 +62,6 @@ ul {
   justify-content: center;
   gap: 5rem;
   flex-wrap: wrap;
-}
-
-#logo {
-  width: 50px;
-  height: auto;
 }
 
 .show li h3 {
@@ -130,33 +141,46 @@ ul {
   border: 0.5px solid #00968859;
 }
 
-.padd {
-  padding: 10px;
-}
-
 .comment-items p {
   padding: 5px;
 }
 
 button {
-  width: 80px;
-  border: none;
-  background: none;
-  background-color: #000;
-  padding: 5px;
   color: #fff;
-  border-radius: 8px;
 }
 
-.btncomment {
+.btn {
+  border: none;
+  border-radius: 8px;
+  padding: 5px;
   color: #000;
   background-color: #fff;
-  margin: 10px;
 }
 
-.description,
+.comment-btn {
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+}
+
 .likes {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5px;
+}
+
+.heart {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.close {
+  display: none;
+}
+
+.flex {
+  display: flex;
 }
