--- a/src/index.css
+++ b/src/index.css
@@ -16,18 +16,32 @@
 .nav,
 footer {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 10px 2rem;
   background-color: #000;
   color: #fff;
   margin-bottom: 20px;
 }
 
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 footer {
   font-style: italic;
   margin-bottom: 0;
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 body {
@@ -54,14 +68,6 @@ li > a {
 
 li > a:hover {
   font-size: large;
-}
-
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 5rem;
-  flex-wrap: wrap;
 }
 
 .show li h3 {
@@ -94,33 +100,36 @@ ul {
 .show-features,
 .show-popup-title {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
 }
 
 .close-icon {
-  display: block;
   position: absolute;
-  right: 117px;
-  top: 58px;
+  right: 230px;
+  top: 75px;
   cursor: pointer;
-  background: #000;
-  color: #fff;
-  border-radius: 50%;
-
-  /* padding: 3px; */
-  width: 20px;
-  height: auto;
-  text-align: center;
-  margin: 0 auto;
 }
 
 .popup-display {
-  justify-content: space-around;
-  align-items: start;
   margin: 20px auto;
   padding: 0;
   background-color: #000;
   color: #fff;
-  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.form-container {
+  margin-top: 10px;
+}
+
+.form-container h4 {
+  margin-bottom: 10px;
 }
 
 .form-content {
@@ -139,6 +148,19 @@ ul {
 .form-content input:hover,
 .form-content textarea:hover {
   border: 0.5px solid #00968859;
+}
+
+.comments-container {
+  margin-top: 20px;
+}
+
+.comment-items {
+  border: 1px solid white;
+  border-radius: 8px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .comment-items p {
@@ -175,4 +197,28 @@ button {
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .popup-display {
+    margin: 20px auto;
+    padding: 0;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .close-icon {
+    position: absolute;
+    right: 10px;
+    top: 90px;
+  }
+
+  .show-image-container img {
+    width: 100%;
+    height: auto;
+  }
 }
